syntax = "proto3";
option go_package = "github.com/crystal-construct/shar/model";

//import "google/protobuf/timestamp.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/any.proto";

message Process {
  repeated Element elements = 1;
  string Name      = 2;
}

message WorkflowVersions {
  repeated WorkflowVersion version = 1;
}

message WorkflowVersion {
  string id = 1;
  bytes sha256 = 2;
  int32 number = 3;
}

message Element {
  string id = 1;
  string name = 2;
  string type = 3;
  string documentation =4;
  string execute =5;
  Targets outbound = 6;
  Process process = 7;
}

message Target {
  string id          = 1;
  repeated string conditions =2;
  string target     =3;
}

message Targets {
  repeated Target target = 1;
  bool exclusive = 2;
}

message JobComplete {

}

message WorkflowState {
  string workflowInstanceId = 1;
  string elementId = 2;
  string elementType = 3;
  string trackingId = 4;
  string execute = 5;
  string state = 6;
  int64 unixTimeNano = 7;
  bytes vars = 8;
}

message WorkflowInstance {
  string workflowInstanceId = 1;
  string parentWorkflowInstanceId = 2;
  string parentElementId = 3;
  string workflowId = 4;
}

message InstanceState {
  string id = 1;
  string state = 2;
  bytes vars = 3;
}